Pre-painting should not paint out-of-view fixed position elements https://bugs.webkit.org/show_bug.cgi?id=104724

Reviewed by James Robinson.

.:

New manual test.

* ManualTests/compositing/fixed-position-out-of-view-scroll-prepaint.html: Added.

Source/WebCore:

Test: ManualTests/compositing/fixed-position-out-of-view-scroll-prepaint.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::paintLayer): Don't paint out-of-view fixed position elements.


Canonical link: https://commits.webkit.org/123046@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137492 268f45cc-cd09-0410-ab3c-d52691b4dbfc